--- a/selfpred.html
+++ b/selfpred.html
@@ -358,7 +358,7 @@
         [+] LEVERAGE: ${leverage}x → PNL: ${roe.toFixed(2)}%
         [+] PROFIT/LOSS: $${profit.toFixed(2)}
         [!] LIQUIDATION PRICE: $${liquidationPrice.toFixed(2)}
-        ${profit >= 0 ? '🚀 JEPE BOSSS' : '⚠️ YAHAHA RUNGKADDD'}
+        ${profit >= 0 ? '🚀 BULLISH SIGNAL DETECTED' : '⚠️ RISK OF LIQUIDATION'}
       `;
 
       showResult(resultText);
